# GestorDeVentas

./: .gitignore  AGENTS.md  NOTES.md  README.md  build-portable.sh  decisiones.md  explicacion_del_proyecto.md  gestor_ventas.db  gestor_ventas.db-shm  gestor_ventas.db-wal  package.json  plan_modificaciones.md  productos  prompt_auditoria.md
GestorDeVentas-829ddb5360370cf4282009a91622f881affee9e3/: .gitignore  package-lock.json
GestorDeVentas-829ddb5360370cf4282009a91622f881affee9e3/src/: index.html
GestorDeVentas-829ddb5360370cf4282009a91622f881affee9e3/src-tauri/src/: config.rs  migrations.rs  sales.rs
GestorDeVentas-c428c2d35be5f35ffbe1c70295cc38972b95e378/: Makefile
GestorDeVentas-c428c2d35be5f35ffbe1c70295cc38972b95e378/src/: app.js
GestorDeVentas-c428c2d35be5f35ffbe1c70295cc38972b95e378/src-tauri/: package.json
GestorDeVentas-c428c2d35be5f35ffbe1c70295cc38972b95e378/src-tauri/capabilities/: default.json
gestor_ventas/: README.md  gestor_ventas.db  productos.txt
gestor_ventas/src/: app.js  fa-local.css  index.html  style.css
src/: app.js  fa-local.css  index.html  style.css
src-tauri/: Cargo.toml  gestorventas.keystore  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: audit.rs  auth.rs  cashier.rs  categorias.rs  clients.rs  config.rs  constants.rs  db.rs  helpers.rs  lib.rs  main.rs  migrations.rs  models.rs  openrouter.rs  products.rs  sales.rs  sync.rs  tasa_bcv.rs
src-tauri/src/sync/: clients.rs  conflicts.rs  mod.rs  orchestrator.rs  products.rs  sales.rs
(+10 files in other folders)
