[package]
name = "gestor-ventas"
version = "1.0.0"
description = "Gestor de Ventas - Tauri v2 + SQLite"
authors = ["dev"]
edition = "2021"

[lib]
name = "gestor_ventas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
strip = "none"
lto = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.64"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4"
android_logger = "0.14"
